# microvm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  microvm-init.sh
docs/tutorials/: 01-hello-world.md  02-interrupts.md  03-virtual-memory.md  04-userspace.md  05-scheduler.md  06-rust-kernel.md
scripts/: Dockerfile.kernel  init.c
src/: dtb.rs  gdb.rs  lib.rs  loader.rs  main.rs  snapshot.rs  vm.rs
src/cpu/: csr.rs  decode.rs  disasm.rs  execute.rs  fpu.rs  mmu.rs  mod.rs  trigger.rs  vector.rs
src/devices/: aplic.rs  clint.rs  mod.rs  plic.rs  rtc.rs  uart.rs  virtio_blk.rs  virtio_console.rs  virtio_net.rs  virtio_rng.rs  virtio_vsock.rs
src/memory/: mod.rs  ram.rs  rom.rs
starter-kit/minimal-kernel/: Makefile  README.md  linker.ld
starter-kit/minimal-kernel/src/: boot.S  main.c  mm.c  mm.h  sched.c  sched.h  syscall.c  syscall.h  trap.c  trap.h  uart.c  uart.h
starter-kit/rust-kernel/: Cargo.toml  Makefile  README.md  linker.ld
starter-kit/rust-kernel/.cargo/: config.toml
starter-kit/rust-kernel/src/: boot.S  main.rs  trap.rs  uart.rs
tests/: cpu_tests.rs
